# pyxel-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  server.json
src/pyxel_mcp/: audio_harness.py  frames_harness.py  harness.py  input_harness.py  layout_harness.py  server.py  sprite_harness.py  state_harness.py
