[project]
name = "pyxel-mcp"
version = "0.1.0"
description = "MCP server for Pyxel, a retro game engine for Python"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyxel_mcp"]

[project.scripts]
pyxel-mcp = "pyxel_mcp.server:main"
