[project]
name = "pyxel-mcp"
version = "0.4.1"
description = "MCP server for Pyxel, a retro game engine for Python. Enables AI to autonomously run, verify, and iterate on retro game programs."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Takashi Kitao", email = "takashi.kitao@gmail.com" }]
keywords = [
    "mcp",
    "pyxel",
    "retro-game",
    "game-engine",
    "pixel-art",
    "ai",
    "claude",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0,<2.0.0", "pyxel"]

[project.urls]
Homepage = "https://github.com/kitao/pyxel-mcp"
Repository = "https://github.com/kitao/pyxel-mcp"
"Bug Tracker" = "https://github.com/kitao/pyxel-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyxel_mcp"]

[project.scripts]
pyxel-mcp = "pyxel_mcp.server:main"
